--- a/index.html
+++ b/index.html
@@ -5,35 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>注册</title>
+    <link rel="stylesheet" href="./default.css">
+    <title>首页</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <div>
-            <h1>注册页面</h1>
-        </div>
-        <form id="signUpForm">
-            <div class="row">
-                <label>邮 箱</label>
-                <input type="text" name="email">
-            </div>
-            <div class="row">
-                <label>密 码</label>
-                <input type="text" name="password">
-            </div>
-            <div class="row">
-                <label>确认密码</label>
-                <input type="text" name="confirm">
-            </div>
-            <div class="row">
-                <input type="submit" name="button" id="button">
-            </div>
-        </form>
+        <section class="main">
+            尊敬的 <span>游客</span> ：您好！
+        </section>
+        <section class="signyp">
+            <a href="./sign_up">注册页面</a>
+        </section>
+        <section class="signin">
+            <a href="./sign_in">登录页面</a>
+        </section>
+        <section class="signout">
+            <a href="./" id="signout">退出登录</a>
+        </section>
     </div>
 </body>
-<script src="jquery-3.4.1.min.js"></script>
-<script src="main.js"></script>
+<script>
+    let buttonout = document.querySelector('#signout')
+    buttonout.onclick = function () {
+        clearAllCookie()
+    }
+    //清除所有cookie函数
+    function clearAllCookie() {
+        var keys = document.cookie.match(/[^ =;]+(?=\=)/g);
+        if (keys) {
+            for (var i = keys.length; i--;)
+                document.cookie = keys[i] + '=0;expires=' + new Date(0).toUTCString()
+        }
+    }
+</script>
 
 </html>
